--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<dependency>
 		<groupId>org.seleniumhq.selenium</groupId>
 		<artifactId>selenium-java</artifactId>
-		<version>3.3.1</version>
+		<version>3.141.59</version>
 	</dependency>
 	<dependency>
     		<groupId>org.testng</groupId>
@@ -65,6 +65,17 @@
     <artifactId>tess4j</artifactId>  
     <version>4.2.1</version>  
 </dependency>
- 
+
+<dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>net.masterthought</groupId>
+            <artifactId>cucumber-reporting</artifactId>
+            <version>5.0.1</version>
+        </dependency>
+
 </dependencies>
 </project>
